...
    private func setup() {
        booksTableView.layer.maskedCorners = [
            .layerMinXMinYCorner,
            .layerMaxXMinYCorner]
        booksTableView.layer.cornerRadius = 38
        booksTableView.backgroundColor = .clear
        addBookButton.accessibilityIdentifier = "libraryAddButton"
        booksTableView.accessibilityIdentifier = "libraryTableView"
    }

    private func bindViewModel() {
        disposeBag = DisposeBag()

        if let viewModel = viewModel {
...
