...

    // MARK: - Properties

    @IBOutlet private var stackViewTopConstraint: NSLayoutConstraint!
    @IBOutlet private var cloudViewImage: UIImageView!
    @IBOutlet private var noDataStackView: UIStackView!
    @IBOutlet private var logOutButton: UIButton!
    @IBOutlet private var emailLabel: UILabel!
    @IBOutlet private var booksTableView: UITableView!
    @IBOutlet private var tableViewLoadingActivityIndicator: UIActivityIndicatorView!
    @IBOutlet private var userInfoLoadingActivitiIndicator: UIActivityIndicatorView!

    var viewModel: AccountViewModelType? {
...

    private func setup() {
        booksTableView.layer.maskedCorners = [
            .layerMinXMinYCorner,
            .layerMaxXMinYCorner]
        booksTableView.layer.cornerRadius = 30
        booksTableView.accessibilityIdentifier = "accountTableView"
        logOutButton.accessibilityIdentifier = "logOutButton"
    }

    private func bindViewModel() {
        disposeBag = .init()

...
